--- a/SICOCA/src/app/modules/sale-point/stores/stores.component.html
+++ b/SICOCA/src/app/modules/sale-point/stores/stores.component.html
@@ -48,3 +48,8 @@
     
     <h4>Subtotal Total: {{ subtotal | currency:'₡':'symbol' }}</h4>
 </div>
+
+
+<div class="container text-center" *ngIf="subtotal > 0">
+    <button class="btn btn-success" (click)="goToPayments()">Pagar</button> 
+</div>
